; ModuleID = '/home/carl/AnghaBench/rofi/source/dialogs/extr_dmenu.c_print_dmenu_options.c'
source_filename = "/home/carl/AnghaBench/rofi/source/dialogs/extr_dmenu.c_print_dmenu_options.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stdout = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [6 x i8] c"-mesg\00", align 1
@.str.1 = private unnamed_addr constant [9 x i8] c"[string]\00", align 1
@.str.2 = private unnamed_addr constant [64 x i8] c"Print a small user message under the prompt (uses pango markup)\00", align 1
@.str.3 = private unnamed_addr constant [3 x i8] c"-p\00", align 1
@.str.4 = private unnamed_addr constant [38 x i8] c"Prompt to display left of entry field\00", align 1
@.str.5 = private unnamed_addr constant [14 x i8] c"-selected-row\00", align 1
@.str.6 = private unnamed_addr constant [10 x i8] c"[integer]\00", align 1
@.str.7 = private unnamed_addr constant [11 x i8] c"Select row\00", align 1
@.str.8 = private unnamed_addr constant [8 x i8] c"-format\00", align 1
@.str.9 = private unnamed_addr constant [21 x i8] c"Output format string\00", align 1
@.str.10 = private unnamed_addr constant [2 x i8] c"s\00", align 1
@.str.11 = private unnamed_addr constant [3 x i8] c"-u\00", align 1
@.str.12 = private unnamed_addr constant [7 x i8] c"[list]\00", align 1
@.str.13 = private unnamed_addr constant [35 x i8] c"List of row indexes to mark urgent\00", align 1
@.str.14 = private unnamed_addr constant [3 x i8] c"-a\00", align 1
@.str.15 = private unnamed_addr constant [35 x i8] c"List of row indexes to mark active\00", align 1
@.str.16 = private unnamed_addr constant [3 x i8] c"-l\00", align 1
@.str.17 = private unnamed_addr constant [11 x i8] c"[integer] \00", align 1
@.str.18 = private unnamed_addr constant [26 x i8] c"Number of rows to display\00", align 1
@.str.19 = private unnamed_addr constant [14 x i8] c"-window-title\00", align 1
@.str.20 = private unnamed_addr constant [10 x i8] c"[string] \00", align 1
@.str.21 = private unnamed_addr constant [27 x i8] c"Set the dmenu window title\00", align 1
@.str.22 = private unnamed_addr constant [3 x i8] c"-i\00", align 1
@.str.23 = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@.str.24 = private unnamed_addr constant [34 x i8] c"Set filter to be case insensitive\00", align 1
@.str.25 = private unnamed_addr constant [12 x i8] c"-only-match\00", align 1
@.str.26 = private unnamed_addr constant [32 x i8] c"Force selection or custom entry\00", align 1
@.str.27 = private unnamed_addr constant [11 x i8] c"-no-custom\00", align 1
@.str.28 = private unnamed_addr constant [26 x i8] c"Don't accept custom entry\00", align 1
@.str.29 = private unnamed_addr constant [8 x i8] c"-select\00", align 1
@.str.30 = private unnamed_addr constant [34 x i8] c"Select the first row that matches\00", align 1
@.str.31 = private unnamed_addr constant [10 x i8] c"-password\00", align 1
@.str.32 = private unnamed_addr constant [52 x i8] c"Do not show what the user inputs. Show '*' instead.\00", align 1
@.str.33 = private unnamed_addr constant [13 x i8] c"-markup-rows\00", align 1
@.str.34 = private unnamed_addr constant [45 x i8] c"Allow and render pango markup as input data.\00", align 1
@.str.35 = private unnamed_addr constant [5 x i8] c"-sep\00", align 1
@.str.36 = private unnamed_addr constant [7 x i8] c"[char]\00", align 1
@.str.37 = private unnamed_addr constant [19 x i8] c"Element separator.\00", align 1
@.str.38 = private unnamed_addr constant [5 x i8] c"'\\n'\00", align 1
@.str.39 = private unnamed_addr constant [7 x i8] c"-input\00", align 1
@.str.40 = private unnamed_addr constant [11 x i8] c"[filename]\00", align 1
@.str.41 = private unnamed_addr constant [50 x i8] c"Read input from file instead from standard input.\00", align 1
@.str.42 = private unnamed_addr constant [6 x i8] c"-sync\00", align 1
@.str.43 = private unnamed_addr constant [60 x i8] c"Force dmenu to first read all input data, then show dialog.\00", align 1
@.str.44 = private unnamed_addr constant [16 x i8] c"-async-pre-read\00", align 1
@.str.45 = private unnamed_addr constant [9 x i8] c"[number]\00", align 1
@.str.46 = private unnamed_addr constant [61 x i8] c"Read several entries blocking before switching to async mode\00", align 1
@.str.47 = private unnamed_addr constant [3 x i8] c"25\00", align 1
@.str.48 = private unnamed_addr constant [3 x i8] c"-w\00", align 1
@.str.49 = private unnamed_addr constant [9 x i8] c"windowid\00", align 1
@.str.50 = private unnamed_addr constant [40 x i8] c"Position over window with X11 windowid.\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @print_dmenu_options() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @stdout, align 4
  %3 = call i32 @fileno(i32 %2)
  %4 = call i32 @isatty(i32 %3)
  store i32 %4, i32* %1, align 4
  %5 = load i32, i32* %1, align 4
  %6 = call i32 @print_help_msg(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([64 x i8], [64 x i8]* @.str.2, i64 0, i64 0), i8* null, i32 %5)
  %7 = load i32, i32* %1, align 4
  %8 = call i32 @print_help_msg(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.3, i64 0, i64 0), i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str.4, i64 0, i64 0), i8* null, i32 %7)
  %9 = load i32, i32* %1, align 4
  %10 = call i32 @print_help_msg(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.5, i64 0, i64 0), i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.6, i64 0, i64 0), i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.7, i64 0, i64 0), i8* null, i32 %9)
  %11 = load i32, i32* %1, align 4
  %12 = call i32 @print_help_msg(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.8, i64 0, i64 0), i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.9, i64 0, i64 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.10, i64 0, i64 0), i32 %11)
  %13 = load i32, i32* %1, align 4
  %14 = call i32 @print_help_msg(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.11, i64 0, i64 0), i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.12, i64 0, i64 0), i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.13, i64 0, i64 0), i8* null, i32 %13)
  %15 = load i32, i32* %1, align 4
  %16 = call i32 @print_help_msg(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.14, i64 0, i64 0), i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.12, i64 0, i64 0), i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.15, i64 0, i64 0), i8* null, i32 %15)
  %17 = load i32, i32* %1, align 4
  %18 = call i32 @print_help_msg(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.16, i64 0, i64 0), i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.17, i64 0, i64 0), i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.18, i64 0, i64 0), i8* null, i32 %17)
  %19 = load i32, i32* %1, align 4
  %20 = call i32 @print_help_msg(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.19, i64 0, i64 0), i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.20, i64 0, i64 0), i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.21, i64 0, i64 0), i8* null, i32 %19)
  %21 = load i32, i32* %1, align 4
  %22 = call i32 @print_help_msg(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.22, i64 0, i64 0), i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.23, i64 0, i64 0), i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.24, i64 0, i64 0), i8* null, i32 %21)
  %23 = load i32, i32* %1, align 4
  %24 = call i32 @print_help_msg(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.25, i64 0, i64 0), i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.23, i64 0, i64 0), i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.26, i64 0, i64 0), i8* null, i32 %23)
  %25 = load i32, i32* %1, align 4
  %26 = call i32 @print_help_msg(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.27, i64 0, i64 0), i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.23, i64 0, i64 0), i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.28, i64 0, i64 0), i8* null, i32 %25)
  %27 = load i32, i32* %1, align 4
  %28 = call i32 @print_help_msg(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.29, i64 0, i64 0), i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.30, i64 0, i64 0), i8* null, i32 %27)
  %29 = load i32, i32* %1, align 4
  %30 = call i32 @print_help_msg(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.31, i64 0, i64 0), i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.23, i64 0, i64 0), i8* getelementptr inbounds ([52 x i8], [52 x i8]* @.str.32, i64 0, i64 0), i8* null, i32 %29)
  %31 = load i32, i32* %1, align 4
  %32 = call i32 @print_help_msg(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.33, i64 0, i64 0), i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.23, i64 0, i64 0), i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str.34, i64 0, i64 0), i8* null, i32 %31)
  %33 = load i32, i32* %1, align 4
  %34 = call i32 @print_help_msg(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.35, i64 0, i64 0), i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.36, i64 0, i64 0), i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.37, i64 0, i64 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.38, i64 0, i64 0), i32 %33)
  %35 = load i32, i32* %1, align 4
  %36 = call i32 @print_help_msg(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.39, i64 0, i64 0), i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.40, i64 0, i64 0), i8* getelementptr inbounds ([50 x i8], [50 x i8]* @.str.41, i64 0, i64 0), i8* null, i32 %35)
  %37 = load i32, i32* %1, align 4
  %38 = call i32 @print_help_msg(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.42, i64 0, i64 0), i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.23, i64 0, i64 0), i8* getelementptr inbounds ([60 x i8], [60 x i8]* @.str.43, i64 0, i64 0), i8* null, i32 %37)
  %39 = load i32, i32* %1, align 4
  %40 = call i32 @print_help_msg(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.44, i64 0, i64 0), i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.45, i64 0, i64 0), i8* getelementptr inbounds ([61 x i8], [61 x i8]* @.str.46, i64 0, i64 0), i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.47, i64 0, i64 0), i32 %39)
  %41 = load i32, i32* %1, align 4
  %42 = call i32 @print_help_msg(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.48, i64 0, i64 0), i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.49, i64 0, i64 0), i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str.50, i64 0, i64 0), i8* null, i32 %41)
  ret void
}

declare dso_local i32 @isatty(i32) #1

declare dso_local i32 @fileno(i32) #1

declare dso_local i32 @print_help_msg(i8*, i8*, i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
